--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <main>
         <button id="btn-sport" class="btn" alt="boutton filtre sport">Sport</button>
         <button id="btn-luxe" class="btn" alt="boutton filtre luxe">Luxe</button>
-        <button id="btn-luxe" class="btn" alt="boutton filtre vintage">Vintage</button>
+        <button id="btn-vintage" class="btn" alt="boutton filtre vintage">Vintage</button>
+        <button id="btn-all" class="btn" alt="boutton filtre all">Tous</button>
+        <article id="cartes">
+            <!-- La ou les cartes créée en JS s'inséreront -->
+        </article>
     </main>
     <footer>
         <a href="index.html" class="lien-footer">Politique de confidentialité</a>
